--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "dependencies": {
     "fastify": "^4.26.2",
     "puppeteer": "^22.7.1"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
